--- a/static/index.pug
+++ b/static/index.pug
@@ -20,6 +20,8 @@ html
                         a(class="navBarLink" href=navBar.home.path title=navBar.home.name) #{navBar.home.name}
             div(id="mainContent")
                 h1(id="home") home
+                div(class="singleStat")
+                        ul(id="int_ip_address",style="width: 70vw;text-align: center;")
                 p #{content.home.home}
                 h1(id="actions") actions
                 div(class="actionList")
