--- a/static/index.pug
+++ b/static/index.pug
@@ -33,6 +33,8 @@ html
                         button(id="pcHibernate",onclick='sendCmd("pcHibernate")') #{content.actions.pcHibernate}
                     div(class="singleAction")
                         button(id="pcShutdown",onclick='sendCmd("pcShutdown")') #{content.actions.pcShutdown}
+                    div(class="singleAction")
+                        button(id="appShutdown",onclick='sendCmd("appShutdown")') #{content.actions.appShutdown}
                 h1(id="stats") stats
                 div(class="statsList")
                     div(class="singleStat")
